[gd_scene load_steps=3 format=3 uid="uid://tag2pom475xc"]

[ext_resource type="Script" path="res://GameObjects/Menu/main_menu.gd" id="1_7x7fg"]
[ext_resource type="AudioStream" uid="uid://co7n0kbrmurgr" path="res://Audio/Music/Serene_game_sound.wav" id="2_2mnon"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchor_right = 0.149479
anchor_bottom = 0.376852
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7x7fg")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(4, 4)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2mnon")
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
